fixed DatabaseMetadata.getTables() + some code improvements (#315)